# pwr_projekt_sdizo

./: README.md
projekt/: CMakeLists.txt  DynamicTable.h  Heap.h  HeapHandler.h  TableHandler.h  heap_struct.cpp  list_structure.cpp  main.cpp
projekt/Handlers/: HeapHandler.h  ListHandler.h  TableHandler.h
projekt/Structures/: BST.cpp  DynamicTable.h  Heap.h  List.h  Table.h
projekt/TimeTests/: BSTTimeTests.cpp  HeapTimeTests.cpp  ListTimeTests.cpp  TableTimeTests.cpp
projekt/tests/structures_tests/: BSTTests.cpp  CMakeLists.txt  HeapTests.cpp  ListTests.cpp  TableTests.cpp  dynamictabletests.cpp
projekt/utils/: Logger.h
projekt_sdizo_MK/: CMakeLists.txt  main.cpp
projekt_sdizo_MK/Handlers/: BSTHandler.h  HeapHandler.h  ListHandler.h
projekt_sdizo_MK/Structures/: Heap.cpp  List.cpp  Table.cpp
projekt_sdizo_MK/TimeTests/: HeapTimeTests.cpp  TableTimeTests.cpp
projekt_sdizo_MK/tests/structures_tests/: ListTests.cpp
